--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,7 +1,14 @@
 .Dictionary {
-    text-align: center;
-    max-width: 350px;
-    margin: 0 auto;
-    background: #e34b62;
-    color: white;
+  max-width: 350px;
+  margin: 0 auto;
+  background: #e34b62;
+  color: white;
+}
+
+.Dictionary .word {
+  font-weight: 600;
+  font-size: 20px;
+}
+.Dictionary .definition {
+  font-style: italic;
 }
