--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,14 +1,22 @@
 .Dictionary {
   max-width: 350px;
-  margin: 0 auto;
+  margin: 50px auto;
   background: #e34b62;
   color: white;
+  border-radius: 34px;
 }
 
 .Dictionary .word {
-  font-weight: 600;
+  font-weight: 700;
   font-size: 20px;
 }
+
+.Dictionary .translation {
+  font-size: 16px;
+  font-weight: 600;
+}
+
 .Dictionary .definition {
   font-style: italic;
+  font-weight: 200;
 }
